unpackaged/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__BatchProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BatchProcessStatus__c</fullName>
    <formula>TEXT( fferpcore__BatchProcess__r.fferpcore__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Process Status</label>
    <type>Text</type>
</CustomField>