unpackaged/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__Process__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Process__c</fullName>
    <label>Scheduled Job</label>
    <referenceTo>fferpcore__ScheduledJob__c</referenceTo>
    <relationshipLabel>Runs</relationshipLabel>
    <relationshipName>Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>