unpackaged/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__TotalNumberOfAborts__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalNumberOfAborts__c</fullName>
    <description>Total number of aborted batches based on the number of batch logs that contain a log type of Abort.</description>
    <inlineHelpText>Total number of aborted batches based on the number of batch logs that contain a log type of Abort.</inlineHelpText>
    <label>Total Aborted Batches</label>
    <summaryFilterItems>
        <field>fferpcore__ScheduledJobLog__c.fferpcore__LogType__c</field>
        <operation>equals</operation>
        <value>Abort</value>
    </summaryFilterItems>
    <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>