unpackaged/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__TotalNumberOfLogs__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalNumberOfLogs__c</fullName>
    <description>Total number of batch logs for this batch control.</description>
    <inlineHelpText>Total number of batch logs for this batch control.</inlineHelpText>
    <label>Total Logs</label>
    <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>